src/components/content/weather/cardlist/card/Card.css
.card {
  background: linear-gradient(45deg, #2196f3 30%, #21cbf3 90%);
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: "Roboto", sans-serif;
}

.card-image {
  padding-top: 1em;
  width: 100%;
  height: 100%;
}

@media (max-width: 600px) {
  .card {
    font-size: 0.8em;
  }
}

